# ecg-qrs_det

./: AndroidManifest.xml  CMakeLists.txt  converting-model.py
assets/model/: model1.onnx  model1.tflite  model2.tflite  quantize-model.onnx
assets/resources/model/: model.tflite
cpp/: CMakeLists.txt  native-lib.cpp
cpp/bkup/: CMakeLists.txt  native-lib.cpp
cpp/include/: loadingData.h
cpp/libs/common/: cnpy.h  logs.h
cpp/libs/libqrs/: CMakeLists.txt
cpp/libs/libqrs-tflite/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ecgqrsDet
cpp/libs/libqrs-tflite/include/: loadingModelTFLITE.h
cpp/libs/libqrs-tflite/src/: loadingModelTFLITE.cpp
cpp/libs/libqrs/include/: loadingModel.h
cpp/libs/libqrs/src/: loadingModel.cpp
cpp/src/: CMakeLists.txt  loadingData.cpp  main.cpp  tflite-main.cpp
include/: loadingData.h
java/com/example/myapplication/: Inference.java  MainActivity.java  Utils.java
libs/libqrs/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/libqrs/include/: loadingModel.h
libs/libqrs/src/: loadingModel.cpp
res/layout/: activity_main.xml
res/values/: strings.xml  themes.xml
res/values-night/: themes.xml
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ecgqrsnew  loadingData.cpp  main.cpp  tflite-main.cpp
